--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
-          extensions: mbstring, bcmath, pdo_mysql
+          php-version: '8.2'  # Updated to PHP 8.2
+          extensions: mbstring, bcmath, pdo_mysql, soap, xml, curl  # Added missing extensions
           ini-values: post_max_size=256M, upload_max_filesize=256M
 
       - name: Install Composer dependencies
