--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,11 +1,3 @@
-name: Laravel Backend CI
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
@@ -31,8 +23,8 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'  # Updated to PHP 8.2
-          extensions: mbstring, bcmath, pdo_mysql, soap, xml, curl  # Added missing extensions
+          php-version: '8.1'
+          extensions: mbstring, bcmath, pdo_mysql
           ini-values: post_max_size=256M, upload_max_filesize=256M
 
       - name: Install Composer dependencies
@@ -40,6 +32,14 @@ jobs:
 
       - name: Copy .env
         run: cp .env.example .env
+
+      - name: Set environment variables
+        run: |
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
       - name: Generate application key
         run: php artisan key:generate
