--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,3 +1,11 @@
+name: Laravel Backend CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
@@ -30,11 +38,9 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
-      - name: Copy .env
-        run: cp .env.example .env
-
       - name: Set environment variables
         run: |
+          echo "DB_CONNECTION=mysql" > .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
