--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Set environment variables
         run: |
           echo "DB_CONNECTION=mysql" > .env
-          echo "DB_HOST=localhost" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
           echo "DB_PORT=3306" >> .env
           echo "DB_DATABASE=laravel" >> .env
           echo "DB_USERNAME=root" >> .env
