--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -50,7 +50,10 @@ jobs:
       - name: Wait for MySQL to be ready
         run: |
           echo "Waiting for MySQL to be ready..."
-          sleep 15  # Adjust this if needed, 15 seconds should suffice for most cases
+          sleep 15
+
+      - name: Create .env file
+        run: cp .env.example .env
 
       - name: Generate application key
         run: php artisan key:generate
@@ -60,3 +63,4 @@ jobs:
 
       - name: Run tests
         run: php artisan test
+
